# extensive-form-solver

./: .gitignore  Dockerfile  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
examples/: demo.py
src/: __init__.py  cli.py
src/core/: __init__.py  backward_induction.py  game_tree.py  kuhn_theorem.py  normal_form.py  sequence_form.py
src/games/: __init__.py  centipede.py  entry_deterrence.py  kuhn_poker.py
src/viz/: app.py
tests/: test_backward_induction.py  test_games.py  test_normal_form.py  test_sequence_form.py
